# manipulator_asif_ros

./: CMakeLists.txt  README.md  package.xml
MATLAB/: read_bags_kinematic_v.m
include/: asif_timing.h  common.h
launch/: implicit_asif.launch  kinematic_velocity_barrier.launch  rviz.launch
src/: controller.cpp  human.cpp  implicit_asif.cpp  integrator.cpp  kinematic_velocity_barrier.cpp  task_giver.cpp
urdf/: irb6640_185_280.urdf
